# smart-squat-rack-kit

./: Architecture.md  Ecosystem-Files.md  Message-Queue.md  README.md  Two-Cameras.md  ecosystem.dev.config.cjs
cackle/: .gitignore  README.md  pyproject.toml
cackle/src/cackle/: __main__.py  camera.py  config.py  double_buffer.py  models.py  publisher.py  service.py  shared_ring.py  shm.py
cackle/src/cackle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cackle/src/tests/: test_import.py
horus/: README.md  inference.py  pyproject.toml
horus/src/horus/: __main__.py  camera.py  comms.py  config.py  pipeline.py  publisher.py  service.py  shared_ring.py  shm.py  types.py  utils.py  zmq_client.py
horus/src/horus/perception/: bar_path.py  features.py  geometry.py  pose.py  rep_state.py
sensei/: .gitignore  README.md  pyproject.toml
sensei/src/sensei/: config.py  rep_tracker.py  service.py  set_tracker.py
sensei/src/sensei/faults/: base.py  elbow_stability.py  knee_callapse_fault.py  knee_instability.py  weight_distribution.py
sensei/src/sensei/utils/: pose_adapter.py
socks/: README.md  package-lock.json  package.json  server.js
ui/: package-lock.json
ui/src/: App.css  App.tsx  DebugPanel.tsx  DualPoseViewer.tsx  HorusDashboard.tsx  index.css  skeleton.ts  types.ts  useHorus.ts  usePoseSocket.ts
ui/src/components/: LiveMetrics.tsx  PoseCanvas.tsx  RepHistory.tsx  RepSummaryCard.tsx
ui/src/hooks/: useHorus.ts  useSenseiSocket.ts
