[project]
name = "horus"
version = "0.1.0"
description = "Perception engine for AI squat coaching system"
requires-python = ">=3.11"
dependencies = [
    "pyzmq>=26.0.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
]

[project.scripts]
horus = "horus.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]